# llvm-project

./: .gitignore
mlir/examples/pandas/: CMakeLists.txt  README.md  design.md
mlir/examples/pandas/docs/: design.md
mlir/examples/pandas/include/: CMakeLists.txt
mlir/examples/pandas/include/Pandas/: CMakeLists.txt  PandasDialect.h  PandasDialect.td  PandasOps.h  PandasOps.td  PandasPasses.h  PandasPasses.td  PandasTypes.h  PandasTypes.td
mlir/examples/pandas/lib/: CMakeLists.txt
mlir/examples/pandas/lib/Pandas/: CMakeLists.txt  LLVMLoweringPass.cpp  PandasDialect.cpp  PandasOps.cpp  PandasPasses.cpp  PandasTypes.cpp
mlir/examples/pandas/pandas-mlir-py/: pandas_custom.py  q10_custom.mlir  q10_custom.py  q1_custom.mlir  q1_custom.py  q3_custom.mlir  q3_custom.py  q5_custom.mlir  q5_custom.py  q6_custom.mlir  q6_custom.py
mlir/examples/pandas/pandas-opt/: CMakeLists.txt  pandas-opt.cpp
mlir/examples/pandas/test/: llvm.mlir  matmul.mlir  matmul_lowered.mlir  q1.mlir  q1.py  q10.mlir  q10.py  q1_custompandas.py  q1_new.mlir  q3.mlir  q5.mlir  q6.mlir  read_lower.mlir  test.mlir  test_read.mlir  test_select.mlir  test_typeinfer.mlir
mlir/include/mlir/ExecutionEngine/: samplerunner.cpp
mlir/test/mlir-cpu-runner/: print.mlir
